--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "multer": "^1.4.3",
     "nodemon": "^3.1.3",
     "path": "^0.12.7",
-    "swagger-ui-express": "^4.1.6"
+    "punycode": "^2.3.1",
+    "swagger-ui-express": "^4.1.6",
+    "unicodejs": "^13.0.3"
   },
   "resolveJsonModule": true
 }
